// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map/MarkerCircle Active 1`] = `
<button
  className="w-6 h-6 rounded-full bg-blue text-center -translate-x-3 -translate-y-3 cursor-default"
  onClick={[Function]}
/>
`;

exports[`Storyshots Map/MarkerCircle Inactive 1`] = `
<button
  className="w-6 h-6 rounded-full bg-gray-500 text-center -translate-x-3 -translate-y-3 cursor-default"
  onClick={[Function]}
/>
`;
